# todo-app-monorepo

./: .env.example  .gitignore  .npmrc  README.md  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml  todo.code-workspace.example
apps/api-fastapi/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
apps/api-fastapi/alembic/: env.py
apps/api-fastapi/alembic/versions/: 68ee137a5c84_prepare_oauth_support.py  b89ca7d6aaef_initial_migration.py  be1f008c1ab7_initial_schema_with_snake_case_columns.py  dfed3ef91a0f_create_audit_logs_table.py  e69096ed52c0_add_uuid_defaults_to_id_columns.py
apps/api-fastapi/app/: __init__.py  initial_data.py  main.py
apps/api-fastapi/app/api/: main.py
apps/api-fastapi/app/api/routes/: __init__.py  admin.py  auth.py  health.py  oauth.py  todos.py  users.py
apps/api-fastapi/app/core/: __init__.py  config.py  db.py
apps/api-fastapi/app/models/: __init__.py  audit.py  todo.py  user.py
apps/api-fastapi/app/schemas/: __init__.py  auth.py  base.py  todo.py  user.py
apps/api-fastapi/app/services/: __init__.py  audit.py  auth.py  email.py  google_oauth.py  jwt.py  microsoft_oauth.py  oauth_state.py  password.py
apps/api-fastapi/scripts/: README.md  dev-utils.sh  example-automation.sh  seed_demo.py  shell.py  utils.py
apps/api-fastapi/tests/: TEST_SUMMARY.md  conftest.py
apps/api-fastapi/tests/integration/: test_admin.py  test_auth.py  test_health.py  test_me.py  test_todos.py
apps/api-fastapi/tests/unit/: test_jwt_service.py  test_password_service.py
apps/api-flask/: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  pytest.ini  run.sh  verify_jwt_config.py
apps/api-flask/docs/: ARCHITECTURE.md  AUDIT_LOG_SCHEMA.md  IMPLEMENTATION.md  JWT_CONFIGURATION.md  JWT_SECRETS_EXPLAINED.md  MAKEFILE_USAGE.md  PASSWORD_HASHING.md  QUICKSTART.md  RUNNING.md  TESTING.md  openapi.yaml
apps/api-flask/scripts/: README.md  manage.py
apps/api-flask/src/: __init__.py  app.py  config.py
apps/api-flask/src/api/: __init__.py  admin.py  auth.py  decorators.py  errors.py  health.py  root.py  swagger.py  todos.py  users.py
apps/api-flask/src/models/: __init__.py  audit_log.py  email_verification_token.py  password_reset_token.py  refresh_token_session.py  todo.py  user.py
apps/api-flask/src/services/: __init__.py  audit_service.py  email_service.py  password_service.py  token_service.py
apps/api-flask/tests/: README.md  conftest.py  test_todos.py  test_todos_unit.py
apps/api-nestjs/: README.md  docker-compose.yml  drizzle.config.ts  package.json
apps/api-nestjs/scripts/: example-automation.sh  utils.ts
apps/api-nestjs/src/: app.module.ts  main.ts
apps/api-spring/: .dockerignore  .env.prod.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  build.gradle.kts  docker-compose.prod.yml  docker-compose.yml  migrate.sh  prometheus.yml  settings.gradle.kts
apps/api-spring/docs/: METRICS.md  SEEDING.md
apps/api-spring/gradle/: apgdiff.gradle.kts
apps/frontend-astro/: .env.example  README.md  astro.config.mjs  package.json
apps/frontend-nextjs/: README.md  next.config.ts  package.json
apps/frontend-nuxtjs/: README.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
apps/frontend-nuxtjs/composables/: useApi.ts  useAuth.ts  useToast.ts  useUtils.ts
apps/frontend-nuxtjs/middleware/: admin.ts  auth.ts  guest.ts  sysadmin.ts
apps/frontend-nuxtjs/pages/: about.vue  dashboard.vue  forgot-password.vue  index.vue  login.vue  register.vue  reset-password.vue  verify-email.vue
apps/frontend-nuxtjs/plugins/: auth.client.ts  theme.client.ts
apps/frontend-nuxtjs/stores/: auth.ts  theme.ts  toast.ts  todos.ts
apps/frontend-nuxtjs/types/: api.ts  index.ts
apps/frontend-nuxtjs/utils/: api-client.ts  api.ts  date.ts  token.ts  validators.ts
docs/: nestjs-REQUIREMENTS.md  openapi.yaml
scripts/: dev-utils.sh
src/: app.module.ts  main.ts
src/common/config/: configuration.ts  env.validation.ts
(+198 files in other folders)
