[project]
name = "todo_fastapi"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "argon2-cffi<24.0.0,>=23.1.0",
    "tenacity<9.0.0,>=8.2.3",
    "pydantic>2.0",
    "emails<1.0,>=0.6",
    "jinja2<4.0.0,>=3.1.4",
    "alembic<2.0.0,>=1.12.1",
    "httpx<1.0.0,>=0.25.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.21",
    "pydantic-settings<3.0.0,>=2.2.1",
    "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
    "pyjwt<3.0.0,>=2.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "pyright>=1.1.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__", ".venv", "alembic"]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportUnusedImport = true
reportUnusedVariable = true

# Deprecation warnings (not errors)
reportDeprecated = "warning"

# ORM/Framework type limitations (warnings instead of errors)
# These are inherent to SQLModel/SQLAlchemy/Pydantic/PyJWT type stubs
reportUnknownVariableType = "warning"  # SQLModel Field, enum lambdas
reportUnknownMemberType = "warning"    # PyJWT encode/decode, SQLAlchemy
reportUnknownLambdaType = "warning"    # Enum value callable lambdas
reportUnknownArgumentType = "warning"  # Framework internals

pythonVersion = "3.12"
# Enable strict type checking - use inline suppressions for known ORM limitations
# This ensures new code is type-checked properly while allowing targeted suppressions
# for SQLModel/SQLAlchemy/Pydantic patterns that have type stub limitations

[tool.ruff]
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.per-file-ignores]
# Allow unused function arguments in API route handlers (FastAPI dependency injection pattern)
"app/api/routes/*.py" = ["ARG001"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
